build PDF on PLOS site

--- a/dsmixtures-appendix-s1.tex
+++ b/dsmixtures-appendix-s1.tex
@@ -68,7 +68,7 @@ Len Thomas$^{1}$
 $\ast$ E-mail: dave@ninepointeightone.net
 \end{flushleft}
 
-In practice, maximization is performed on the $\log$-likelihood. However, as noted in the literature \cite{Gelman:2013tc, Marin:2005wf}, mixture model likelihoods can be notoriously multimodal. This can cause problems when finding MLEs of the parameters. Here simulated annealing (SANN; \cite[Chapter 10]{Press:1990tn}) was used to explore the parameter space (for 500 iterations) then after that the Broyden-Fletcher-Goldfarb-Shanno method (BFGS; \cite[Chapter 10]{Press:1990tn}) was used to find the maxima (the implementations in the \textsf{R} function \texttt{optim()} were used). These two steps were run 5 times. This two step approach appears to be satisfactory in most cases. The EM algorithm \cite{Dempster:1977ul} was tested although there was no significant performance increase (in terms of computational time or parameter precision) over using BFGS with SANN. To aid the optimization, analytic derivatives were also used; these are given in Text S2.
+In practice, maximization is performed on the $\log$-likelihood. However, as noted in the literature \cite{Gelman:2013tc, Marin:2005wf}, mixture model likelihoods can be notoriously multimodal. This can cause problems when finding MLEs of the parameters. Here simulated annealing (SANN; \cite[Chapter 10]{Press:1990tn}) was used to explore the parameter space (for 500 iterations) then after that the Broyden-Fletcher-Goldfarb-Shanno method (BFGS; \cite[Chapter 10]{Press:1990tn}) was used to find the maxima (the implementations in the R function optim() were used). These two steps were run 5 times. This two step approach appears to be satisfactory in most cases. The EM algorithm \cite{Dempster:1977ul} was tested although there was no significant performance increase (in terms of computational time or parameter precision) over using BFGS with SANN. To aid the optimization, analytic derivatives were also used; these are given in Text S2.
 
 \subsection*{Starting values}
 
